# klavicle

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  flow_analysis_20250210_120147.csv  flow_analysis_20250210_145729.csv  project_structure  pyproject.toml  pytest.ini  run_enhanced_analysis.py  tag_analysis_20250210_085933.csv  tag_analysis_20250210_092832.csv  tag_analysis_20250210_093222.csv  tag_analysis_20250210_093929.csv  tag_analysis_20250210_094333.csv
docs/: AI_ANALYSIS_PLAN.md
exports/: test_data.json  test_export.json
klaviyo_api/: flows_api.md
outputs/: klaviyo_overview.md  klaviyo_real_data_overview.md
prompts/: enhanced_prompt.txt
scripts/: enhanced_unified_prompt.py  fix_sample_mode.py
scripts/analysis/: run_enhanced_analysis.py  run_sample_analysis.py
setup/: backend.md  cli_specs.md  database_connector.md  klaviyo_sdk_methods.md  prd.md  userflow.md
setup/api/: klaviyo_lists_api.md  klaviyo_overview_api.md  klaviyo_profiles_api.md  klaviyo_segments_api.md  klaviyo_tags_api.md
src/klavicle/: __init__.py  __main__.py  klaviyo_api.json
src/klavicle/ai/: __init__.py  analyzer.py  export.py  mock_analyzer.py  prompts.py  prompts.py.bak  tag_analyzer.py  test_analyzer.py
src/klavicle/cli/: __init__.py  ai_commands.py  commands.py  config_commands.py  klaviyo_commands.py  main.py  query_commands.py
src/klavicle/config/: __init__.py  manager.py
src/klavicle/database/: __init__.py  connection.py  query_manager.py  test_connection.py  (+1 more)
tests/: conftest.py  test_cli.py  test_database.py  test_klaviyo.py  test_main.py  test_validation.py
(+11 files in other folders)
